--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,14 @@ body{
 	opacity: 0.5;
 }
 
+.container .valid-keys .matched.completed{
+	position: relative;
+	top: 0;
+	left: 0;
+	opacity: 1;
+	animation: moveDown 200ms easy-in;
+}
+
 .container .completed-words{
 	width: max-content;
 	height: 100vh;
@@ -59,6 +67,12 @@ body{
 	font-size: 1.8rem;
 	line-height: 2.5rem;
 	opacity: 0.5;
+	display: flex;
+}
+
+.container .completed-words ol{
+	flex-grow: 1;
+	align-self: flex-end
 }
 
 .container .typed-keys{
@@ -66,4 +80,21 @@ body{
 	font-size: 1.3rem;
 	width: 400px;
 	overflow: hidden;
+}
+
+@keyframes moveDown {
+	0% {
+		top: 0;
+		opacity: 1;
+	}
+	
+	20% {
+		top: -3rem;
+		background-color: #26947c;		
+	}
+	
+	100% {
+		top: 22rem;
+		opacity: 0;
+	}
 }
